[tool.poetry]
name = "myhn"
version = "0.1.0"
description = ""
authors = ["Noskcaj <kcajdev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
postgres = "^4.0"
httpx = {version = "^0.19.0", allow-prereleases = true}
fastapi = {extras = ["all"], version = "^0.68.1"}
uvicorn = {version = "<0.15.0", extras = ["standard"]}
Jinja2 = "<3.0.0"
pony = "^0.7.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
